# sdl3-ctypes

./: LICENSE  README.md  main.py  pyproject.toml
scripts/: SDL_AudioFormat.py  SDL_IOStreamInterface.py  SDL_StorageInterface.py  generate.py  sdl_pixelformat.py
sdl3_ctypes/: SDL_assert.py  SDL_asyncio.py  SDL_atomic.py  SDL_audio.py  SDL_bits.py  SDL_blendmode.py  SDL_camera.py  SDL_clipboard.py  SDL_cpuinfo.py  SDL_dialog.py  SDL_error.py  SDL_events.py  SDL_filesystem.py  SDL_gamepad.py  SDL_gpu.py  SDL_guid.py  SDL_hidapi.py  SDL_hints.py  SDL_init.py  SDL_intrin.py  SDL_iostream.py  SDL_keyboard.py  SDL_keycode.py  SDL_loadso.py  SDL_locale.py  SDL_log.py  SDL_main.py  SDL_messagebox.py  SDL_metal.py  SDL_misc.py  SDL_mouse.py  SDL_mutex.py  SDL_pen.py  SDL_pixels.py  SDL_power.py  SDL_process.py  SDL_properties.py  SDL_rect.py  SDL_render.py  SDL_scancode.py  (+13 more)
