[project]
name = "sdl3-ctypes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "aiohttp",
    "beautifulsoup4>=4.13.4",
    "black>=24.8.0",
    "isort>=5.13.2",
]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
